feat: index.html - atualização e pequenos ajustes | css.style - página inicial finalizada.

--- a/index.html
+++ b/index.html
@@ -28,9 +28,20 @@
         </svg>                                              
       </a>
     </dev>
-
   </header>
 
+  <main>
+    <div class="button-group">
+      <button class="start-button">Vamos começar?</button>
+      <span class="divider-button"></span>
+      <button class="play-button">
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path d="M8 5v14l11-7z"/>
+        </svg>
+      </button>
+    </div>  
+  </main>
+  
   <footer>
         <p>&copy; 2026 Nilton F. O. Júnior</p>
   </footer>
