index.html - atualização do index e mover o svg | style.css - atualização do css e pequenos ajustes | script.js - adição do script do botão | assets - criação dos 2 svgs

--- a/src/pages/categories.html
+++ b/src/pages/categories.html
@@ -16,42 +16,33 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="src/css/style.css">
-  <link rel="stylesheet" href="src/css/home.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/categories.css">
 </head>
 
 <body>
   <header>
     <div class="home-icon">
-      <a href="index.html" aria-label="Página Inicial">
-        <img src="src/assets/images/home.svg" alt="Home" width="32" height="32">
+      <a href="../../index.html" aria-label="Página Inicial">
+        <img src="../assets/images/home.svg" alt="Home" width="32" height="32">
       </a>
     </div>
 
     <div class="github-icon">
       <a href="https://github.com/nilton-f-o-junior" target="_blank" rel="noopener noreferrer" aria-label="Visitar perfil no GitHub">
-        <img src="src/assets/images/github.svg" alt="Github" width="32" height="32"> 
+        <img src="../assets/images/github.svg" alt="Github" width="32" height="32"> 
       </a>
     </div>
   </header>
 
   <main>
     <div class="button-group">
-      <button class="start-button">Vamos começar?</button>
-      <span class="divider-button"></span>
-      <button class="play-button">
-        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path d="M8 5v14l11-7z"/>
-        </svg>
-      </button>
-    </div>
+      <button class="vocabulary-button">Vocabulário</button>
+      <button class="expressions-button">Expressões</button>
+    </div>  
   </main>
    
-  <footer role="contentinfo">
-    <p>
-      <small>&copy; 2026 Nilton F. O. Júnior. Todos os direitos reservados.</small>
-    </p>
-  </footer>
+  <footer></footer>
 
   <script src="src/js/script.js" defer></script>
   
